# valentine_quest

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  Makefile.mac  conanfile.txt  door.cpp  door.h  game_window.cpp  game_window.h  heart.cpp  heart.h  level.cpp  level.h  level_manager.cpp  level_manager.h  main.cpp  menu.cpp  menu.h  monster.cpp  monster.h  player.cpp  player.h  position.cpp  position.h  readme.md
apple_stuff/: icon.icns
data/01/: lvl_desc  lvl_map
data/02/: lvl_desc  lvl_map
data/03/: lvl_desc  lvl_map
data/04/: lvl_desc  lvl_map
data/05/: lvl_desc  lvl_map
data/06/: lvl_desc  lvl_map
data/07/: lvl_desc  lvl_map
data/08/: lvl_desc  lvl_map
scripts/: valentine_quest
src/: door.cpp  door.hpp  game_window.cpp  game_window.hpp  heart.cpp  heart.hpp  level.cpp  level.hpp  level_manager.cpp  level_manager.hpp  main.cpp  menu.cpp  menu.hpp  monster.cpp  monster.hpp  player.cpp  player.hpp  position.cpp  position.hpp
